update register + complete forgot password by Thanh

--- a/css/stylelogin.css
+++ b/css/stylelogin.css
@@ -36,10 +36,6 @@
 
 
 /*-- Index-Page-Styling --*/
-html{
-
-}
-
 body {
 	background:
 	linear-gradient(rgba(0, 0, 0, 0.1), 
@@ -97,7 +93,7 @@ h2 {
     text-transform: uppercase;
 }
 
-input[type="text"], input[type="password"], input[type="email"]{
+input[type="text"], input[type="password"], input[type="email"], input[type="tel"], input[type="date"]{
 	width: 84%;
 	padding: 15px 10px 15px;
 	font-size: 14px;
@@ -119,6 +115,15 @@ input[type="email"] {
 
 input[type="password"] {
 	background: url("../images/password.png") no-repeat 382px 11px;
+	background-size: 25px;
+}
+
+input[type="tel"] {
+	background: url("../images/password.png") no-repeat 382px 11px;
+	background-size: 25px;
+}
+
+input[type="date"] {
 	background-size: 25px;
 }
 
@@ -282,7 +287,7 @@ input[type="checkbox"] {
     margin-bottom: 40px;
     letter-spacing: 4px;
 }
-.form-sub-w3ls input[type="text"],.form-sub-w3ls input[type="password"],.form-sub-w3ls input[type="email"]{
+.form-sub-w3ls input[type="text"],.form-sub-w3ls input[type="password"],.form-sub-w3ls input[type="email"], .form-sub-w3ls input[type="tel"],.form-sub-w3ls input[type="date"]{
 	border:2px solid #fff;
 }
 .submit-w3l  input[type="submit"] {
@@ -388,7 +393,7 @@ input[type="checkbox"] {
 	.w3layoutscontaineragileits {
 		width: 70%;
 	}
-	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"] {
+	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"],.w3layoutscontaineragileits input[type="tel"],.w3layoutscontaineragileits input[type="date"] {
 		width: 87%;
 	}
 	.w3footeragile p {
@@ -416,7 +421,7 @@ input[type="checkbox"] {
 	.w3layoutscontaineragileits {
 		width: 78%;
 	}
-	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"] {
+	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"],.w3layoutscontaineragileits input[type="tel"],.w3layoutscontaineragileits input[type="date"] {
 		width: 87%;
 	}
 	.w3footeragile p {
@@ -432,7 +437,7 @@ input[type="checkbox"] {
 	h2 {
 		font-size: 30px;
 	}
-	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"] {
+	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"],.w3layoutscontaineragileits input[type="tel"],.w3layoutscontaineragileits input[type="date"] {
 		width: 92%;
 	}
 	ul.tick {
@@ -477,7 +482,7 @@ input[type="checkbox"] {
 	.aitssendbuttonw3ls p {
 		float: left;
 	}
-	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"] {
+	.w3layoutscontaineragileits input[type="text"],.w3layoutscontaineragileits input[type="password"],.w3layoutscontaineragileits input[type="email"],.w3layoutscontaineragileits input[type="tel"],.w3layoutscontaineragileits input[type="date"] {
 		width: 94%;
 		padding: 13px 8px 13px;
 	}
@@ -487,6 +492,13 @@ input[type="checkbox"] {
 	}
 	input[type="password"] {
 		background: url(../images/password.png) no-repeat 300px 11px;
+		background-size: 23px;
+	}
+	input[type="tel"] {
+		background: url(../images/password.png) no-repeat 300px 11px;
+		background-size: 23px;
+	}
+	input[type="date"] {
 		background-size: 23px;
 	}
 	ul.agileinfotickwthree a {
@@ -518,6 +530,13 @@ input[type="checkbox"] {
 	}
 	input[type="password"] {
 		background: url(../images/password.png) no-repeat 255px 11px;
+		background-size: 23px;
+	}
+	input[type="tel"] {
+		background: url(../images/password.png) no-repeat 255px 11px;
+		background-size: 23px;
+	}
+	input[type="date"] {
 		background-size: 23px;
 	}
 	.aitssendbuttonw3ls p {
@@ -558,7 +577,7 @@ input[type="checkbox"] {
 	.w3layoutscontaineragileits {
 		width: 78%;
 	}
-	input[type="text"], input[type="password"], input[type="email"] {
+	input[type="text"], input[type="password"], input[type="email"], input[type="tel"],input[type="date"] {
 		font-size: 13px;
 	}
 	.contact-form1 {
@@ -599,6 +618,13 @@ input[type="checkbox"] {
 	}
 	input[type="password"] {
 		background: url(../images/password.png) no-repeat 230px 11px;
+		background-size: 23px;
+	}
+	input[type="tel"] {
+		background: url(../images/password.png) no-repeat 230px 11px;
+		background-size: 23px;
+	}
+	input[type="date"] {
 		background-size: 23px;
 	}
 	ul.agileinfotickwthree li input[type="checkbox"]+label span:first-child {
