--- a/css/box.css
+++ b/css/box.css
@@ -258,10 +258,10 @@ button::-moz-focus-inner {
 	margin:1em 0;
 	color: #a63d56;
 }
-.login input[type="text"],.login input[type="password"]{
+.login input[type="text"],.login input[type="password"],.login input[type="tel"],.login input[type="date"]{
 	width:90%;
 	padding:5px;
-	margin:3px 0;x
+	margin:3px 0;
 	border: 1px solid #a63d56;
 	outline: none !important;
 }
@@ -273,7 +273,23 @@ button::-moz-focus-inner {
 	background: #EBEBEB;
 	border: solid 1px #222;
 }
-.signup input.email[type="text"],.signup input[type="password"]{
+.signup input[type="tel"]{
+	width: 44.5%;
+	padding: 5px;
+	margin: 10px 0;
+	outline: none;
+	background: #EBEBEB;
+	border: solid 1px #222;
+}
+.signup input[type="date"]{
+	width: 44.5%;
+	padding: 5px;
+	margin: 10px 0;
+	outline: none;
+	background: #EBEBEB;
+	border: solid 1px #222;
+}
+.signup input.email[type="text"],.signup input[type="password"],.signup input[type="tel"],.signup input[type="date"]{
 	width: 90%;
 	padding: 5px;
 	margin: 10px 0;
@@ -337,6 +353,12 @@ button::-moz-focus-inner {
 	.comments-area input[type="text"], .comments-area textarea{
 		width:92%;
 	}
+	.comments-area input[type="tel"], .comments-area textarea{
+		width:92%;
+	}
+	.comments-area input[type="date"], .comments-area textarea{
+		width:92%;
+	}
 	.comments-area div{
 		padding:2px 0;
 	}
@@ -349,6 +371,12 @@ button::-moz-focus-inner {
 		width: 29%;
 	}
 	.signup input[type="text"] {
+		width: 90%;
+	}
+	.signup input[type="tel"] {
+		width: 90%;
+	}
+	.signup input[type="date"] {
 		width: 90%;
 	}
 	.mfp-close {
