update cart, create and process bill

--- a/css/style_cart.css
+++ b/css/style_cart.css
@@ -49,4 +49,8 @@ td {
   table#cart tfoot td .btn {
   display:block;
   }
+  a.disabled {
+    pointer-events: none;
+    cursor: default;
+  }
   }
