--- a/css/style.css
+++ b/css/style.css
@@ -342,8 +342,8 @@ a:focus {
   margin-bottom: 145px;
 }
 
-.slider_section .detail-box h1 {
-  font-size: 3.5rem;
+.slider_section .detail-box h2 {
+  color: white !important;
   font-weight: bold;
   margin-bottom: 15px;
 }
