--- a/css/style.css
+++ b/css/style.css
@@ -338,12 +338,12 @@ a:focus {
 
 .slider_section .detail-box {
   color: #ffffff;
-  margin-bottom: 145px;
+  margin-bottom: 48px;
 }
 
-.slider_section .detail-box h1 {
-  font-size: 3.5rem;
+.slider_section .detail-box h2 {
   font-weight: bold;
+  color: white !important;
   margin-bottom: 15px;
 }
 
