--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,7 @@ a:focus {
 
 .slider_section .detail-box a:hover {
   background-color: #e69c00;
+  color: #e69c00;
 }
 
 .slider_section .img-box img {
@@ -465,6 +466,10 @@ a:focus {
 
 .offer_section .box .detail-box a:hover {
   background-color: #e69c00;
+}
+.offer_section .box .detail-box h6 a:hover {
+  background-color: #e69c00;
+  color: #e69c00;
 }
 
 .offer_section .box .detail-box a svg {
